# im_flutter_sdk

./: .clang-format  .gitignore  .gitmodules  README.md  agora_build.sh
android/: build.gradle
example/android/app/: build.gradle
example/ios/: Podfile
example/lib/: main.dart
ext_sdk/: im_flutter_sdk_cpp.podspec
ext_sdk/cpp/: CMakeLists.txt  README.md
ext_sdk/cpp/common/: ExtSdkConfig.cpp  ExtSdkConfig.h  ExtSdkLanguageType.cpp  ExtSdkLanguageType.h  ExtSdkListener.cpp  ExtSdkListener.h  ExtSdkMethodType.cpp
ext_sdk/cpp/core/: ExtSdkApi.cpp  ExtSdkApi.h
ext_sdk/cpp/java/: ExtSdkApiJava.cpp  ExtSdkApiJava.h  ExtSdkCallback.cpp  ExtSdkCallback.h  ExtSdkJniHelper.cpp  ExtSdkListenerJava.cpp  ExtSdkListenerJava.h
ios/: im_flutter_sdk.podspec
ios/Classes/: EMChatThread+Helper.m  ImFlutterSdkPlugin.m
ios/NewClasses/common/: ExtSdkApi.h  ExtSdkCallback.h  ExtSdkCallbackObjc.h  ExtSdkDelegate.h  ExtSdkDelegateObjc.h  ExtSdkMethodType.h  ExtSdkMethodType.m  ExtSdkMethodTypeObjc.h  ExtSdkMethodTypeObjc.m  ExtSdkThreadUtil.m
ios/NewClasses/dispatch/: ExtSdkChatManagerWrapper.h  ExtSdkChatManagerWrapper.m  ExtSdkChatroomManagerWrapper.h  ExtSdkChatroomManagerWrapper.m  ExtSdkClientWrapper.h  ExtSdkClientWrapper.m  ExtSdkContactManagerWrapper.h  ExtSdkContactManagerWrapper.m  ExtSdkConversationWrapper.h  ExtSdkConversationWrapper.m  ExtSdkDispatch.h  (+13 more)
lib/src/: em_channel.dart  em_chat_manager.dart  em_chat_room_manager.dart  em_client.dart  em_contact_manager.dart  em_group_manager.dart  em_push_manager.dart  em_test.dart  em_userInfo_manager.dart
(+28 files in other folders)
